--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,9 @@
 databaseChangeLog:
   - include:
       file: db/changelog/init.sql
+  - include:
+      file: db/changelog/account_data.sql
+  - include:
+      file: db/changelog/dictionary_data.sql
+  - include:
+      file: db/changelog/word_data.sql
