--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,10 @@
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 		<!--Database-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -100,6 +103,7 @@
 					<dependency>
 						<groupId>org.springframework.boot</groupId>
 						<artifactId>spring-boot-starter-data-jpa</artifactId>
+						<version>2.7.7</version>
 					</dependency>
 				</dependencies>
 			</plugin>
