--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/template1
+    url: jdbc:postgresql://localhost:5432/bot
     username: postgres
     password: postgres
     driverClassName: org.postgresql.Driver
